--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "OnixFang",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "socket.io": "^4.0.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
